--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/x-data-grid": "^6.12.1",
     "csv-parse": "5.5.0",
+    "dotenv": "^16.3.1",
     "mongoose": "7.5.0",
     "next": "13.4.19",
     "react": "18.2.0",
