--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@mui/x-data-grid": "^6.12.1",
+    "axios": "^1.5.0",
     "csv-parse": "5.5.0",
     "dotenv": "^16.3.1",
     "mongoose": "7.5.0",
