Se agregaron dos archivos yml uno para realizar el build, otro para realizar el seedeo y por último se modificó el archivo docker-compose.yml para levantar la aplicación

--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -12,11 +12,10 @@ services:
 
   app:
     container_name: zurich_app
-    image: 117mdr_rightnow_migracion_app
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 3000:3000
     environment:
       - MONGODB_URI=mongodb://db:27017/117mdr
-    depends_on:
-      - db
-    command: npm run seed
