--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,10 @@ services:
 
   app:
     container_name: zurich_app
-    image: sergiogenes/117mdr_rightnow_migracion_app
+    image: frontend_rightnow_migracion_app:latest
     ports:
       - 3000:3000
     environment:
       - MONGODB_URI=mongodb://db:27017/117mdr
+    volumes:
+      - ./assets:/app/assets
