--- a/docker-compose.seed.yml
+++ b/docker-compose.seed.yml
@@ -12,11 +12,13 @@ services:
 
   app:
     container_name: zurich_app
-    image: sergiogenes/117mdr_rightnow_migracion_app
+    image: frontend_rightnow_migracion_app:latest
     ports:
       - 3000:3000
     environment:
       - MONGODB_URI=mongodb://db:27017/117mdr
+    volumes:
+      - ./assets:/app/assets
     depends_on:
       - db
     command: npm run seed
